--- a/style.css
+++ b/style.css
@@ -6,31 +6,43 @@
 body{
     width: 90vw;
     margin: auto;
+    font-family: 'Poppins', sans-serif;
+    background-color: #A8A8A8;
+    color: #181818;
 }
 #header{
     width: 100%;
     height: 150px;
     display: inline-block;
     position: relative;
-    background-color: red;
 }
 #dropdown{
     display: inline-block;
     position: absolute;
-    top:50%;
-    left:10;
-    transform: translate(50%,-50%);
+    top:20%;
+    transform: translate(180%,-50%);
 }
-ul{
-    display: none;
-    list-style: none;
-    position: absolute;
-    top:60%;
-    left:50%;
-    transform: translate(50%,-50%);
+.btn{
+    width:120px;
+    height:30px;
+    border-radius: 25px;
+    border-color: blue;
+    color: #fff;
+    box-shadow: 0 0 40px 40px blue inset, 0 0 0 0 blue;
+    transition: all 150ms ease-in-out;
+    font-family: 'Poppins', sans-serif;
 }
-li{
-    padding: 5px;
+.btn:hover {
+  box-shadow: 0 0 10px 0 blue inset, 0 0 10px 2px blue;
+}
+select{
+    font-family: 'Poppins', sans-serif;
+    background-color: #F8F8F8;
+    border-radius: 5px;
+}
+label{
+    font-size: 18px;
+    font-weight: bold;
 }
 #search{
     display: inline-block;
@@ -40,21 +52,90 @@ li{
     transform: translate(-50%,-50%);
 }
 
-.main{
+#main{
     display: grid;
     height: 300px;
     align-items: center;
     justify-content: center;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
+    grid-template-areas: "b a d"
+                        "b c d";
+    border-radius: 3px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 1);
+    font-size: 20px;   
+}
+.a{
+    grid-area: a;
+}
+.b{
+    grid-area: b;
+}
+.c{
+    grid-area: c;
+}
+.d{
+    grid-area: d;
+}
+#gridCity{
+    place-self: center;
+    /* grid-column: 1/4; */
+    text-align: center;
 }
 #city{
+    font-size: 60px;
+    font-weight: bold;
+}
+#country{
+    font-style: italic;
+}
+#skyCondition{
+    text-align: center;
     place-self: center;
-    grid-column: 1/4;
-    /* align-self: center; */
+    font-size: 35px;
+}
+#tempature, #humidity, #wind{
+    place-self: center;
+}
+#datas1 p, #datas2 p{
+    line-height: 2;
+    text-align: center;
+}
+#datas2{
+    margin-top: 70px;
+}
+#main[hidden]{
+    display: none;
+}
+#spinner:not([hidden]) {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #spinner::after {
+    content: "";
+    width: 80px;
+    height: 80px;
+    border: 2px solid #f3f3f3;
+    border-top: 3px solid #f25a41;
+    border-radius: 100%;
+    will-change: transform;
+    animation: spin 1s infinite linear
+  }
+  
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
 
-}
-#tempature, #skyCondition, #humidity{
-    place-self: center;
-    /* align-self: center; */
-}
+
