--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@
 }
 body{
     width: 90vw;
+    height: 100vh;
     margin: auto;
     font-family: 'Poppins', sans-serif;
     background-color: #A8A8A8;
     color: #181818;
+    background-image: url("pictures/bckImg.jpg");
 }
 #header{
     width: 100%;
@@ -18,10 +20,11 @@ body{
     position: relative;
 }
 #dropdown{
-    display: inline-block;
+    /* display: inline-block; */
     position: absolute;
     top:20%;
-    transform: translate(180%,-50%);
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 .btn{
     width:120px;
@@ -56,6 +59,7 @@ label{
 #main{
     display: grid;
     height: 300px;
+    width: 60vw;
     align-items: center;
     justify-content: center;
     grid-template-columns: repeat(3, 1fr);
@@ -64,6 +68,9 @@ label{
                         "b c d";
     border-radius: 3px;
     box-shadow: 0 3px 10px rgb(0 0 0 / 1);
+    background-color: rgba(0,0,0, 0.4);
+    color: #F8F8F8;
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.4);
     font-size: 20px;   
 }
 .a{
@@ -108,16 +115,16 @@ label{
 #main[hidden]{
     display: none;
 }
-  .loading {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    z-index: 9999;
-    animation-delay: 5s;
-  }
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 9999;
+  animation-delay: 5s;
+}
   
   .loading-text {
     position: absolute;
@@ -192,5 +199,13 @@ label{
     }
   }
 
+
+  #draggable {
+    display:flex;
+    position: fixed;
+  }
+  .no-select {
+    user-select: none;
+  }
 
 
