--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ label{
     background-color: rgba(0,0,0, 0.4);
     color: #F8F8F8;
     text-shadow: 2px 2px rgba(0, 0, 0, 0.4);
-    font-size: 20px;   
+    font-size: 20px; 
+    backdrop-filter: blur(5px);  
 }
 .a{
     grid-area: a;
